Fix wrapping text on compare page

--- a/python/ecep/portal/static/scss/_compare.scss
+++ b/python/ecep/portal/static/scss/_compare.scss
@@ -2,6 +2,11 @@
 
   .scroll-message {
     height: 2rem;
+    flex-grow: 1;
+
+    svg {
+      width: 2rem;
+    }
 
     .scroll-note {
       height: 100%;
@@ -13,6 +18,7 @@
         font-weight: 400;
         font-style: italic;
         margin-bottom: 0;
+        white-space: nowrap;
       }
     }
   }
